--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@payloadcms/db-mongodb": "^3.72.0",
     "@payloadcms/next": "^3.72.0",
     "@payloadcms/richtext-lexical": "^3.72.0",
+    "@payloadcms/storage-vercel-blob": "^3.72.0",
     "@payloadcms/translations": "^3.72.0",
     "@payloadcms/ui": "3.72.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
