--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.27.0",
     "next": "16.1.2",
+    "next-intl": "^4.7.0",
     "payload": "^3.72.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
