--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@payloadcms/translations": "^3.72.0",
     "@payloadcms/ui": "3.72.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.19",
     "@trpc/client": "^11.8.1",
