--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "generate:types": "payload generate:types"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@payloadcms/db-mongodb": "^3.72.0",
     "@payloadcms/next": "^3.72.0",
     "@payloadcms/richtext-lexical": "^3.72.0",
     "@payloadcms/storage-vercel-blob": "^3.72.0",
     "@payloadcms/translations": "^3.72.0",
     "@payloadcms/ui": "3.72.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.19",
     "@trpc/client": "^11.8.1",
@@ -34,12 +38,15 @@
     "motion": "^12.27.0",
     "next": "16.1.2",
     "next-intl": "^4.7.0",
+    "next-themes": "^0.4.6",
     "payload": "^3.72.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-error-boundary": "^6.1.0",
+    "react-hook-form": "^7.71.1",
     "server-only": "^0.0.1",
     "sharp": "^0.34.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
