--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "16.1.2",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.6",
     "payload": "^3.72.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
